--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "framer-motion": "^12.23.12",
     "i18next": "^25.3.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
